--- a/movie-recommendation-app/app/globals.css
+++ b/movie-recommendation-app/app/globals.css
@@ -5,15 +5,14 @@
   --foreground: #FFFFFF;
 }
 
-@theme{
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-open-sans);
+  --font-sans: var(--font-nunito), ui-sans-serif, system-ui, sans-serif;
 }
-
-
 
 body {
   background: var(--background);
   color: var(--foreground);
+  font-family: var(--font-sans);
 }
